--- a/styles/main.css
+++ b/styles/main.css
@@ -1,63 +1,144 @@
 body {
-  padding-bottom: 5rem;
+padding-bottom: 5rem;
+}
+
+.container {
+   display: grid;
+   grid-auto-columns: 25%;
+   /* grid-auto-rows: 100%; */
+   grid-column-gap: 20px;
+   margin: 25px;
+
+
+   justify-items: center;
+   align-items: center;
 }
 
 
-header {
-   background: url(../images/hero-image-3.jpg) center / cover;
-   height: 60vh;
-   justify-content: center;
-   text-align: left ;
-
-   }
 
 
+/* TYPOGRAPHY & GENERAL  */
 
- h1 {
-   color: ;
-   font-weight: bold;
- }
+button{
+background-color:#d3aa6c;
+border:none;
+color:#ffffff;
+font-weight: medium;
+font-family: avenir;
+font-size: 16px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+cursor: default;
+text-transform: uppercase;
+width: 325px;
+height: 36px;
 
- .slogan {
-   color: ;
-   font-weight: lighter;
-   font-size: 1.6rem;
- }
-
-
-main {
-  max-width: 900px;
 }
 
-.project-description {
-  padding-left: 0;
+h1 {
+color: #3A4E66;
+font-weight: bolder;
+font-family: avenir;
+font-size: 30px;
+line-height: 150%;
 }
 
-.project img {
-  width: 100%;
+h2 {
+color:#3a4e66;
+font-family: Avenir;
+font-style: normal;
+font-weight: normal;
+font-size: 24px;
+line-height: 167.23%;
+}
+
+h3 {
+color: ;
+font-weight: medium;
+font-family: avenir;
+font-size: 20px;
+color:#d3aa6c;
+}
+
+h4{
+  font-weight: medium;
+  font-family: avenir;
+  font-size: 16px;
+  color:#3a4e66;
+
+}
+
+p{
+font-family: Baskerville;
+font-style: normal;
+font-weight: normal;
+font-size: 16px;
+line-height: 167.23%;
+color: #3A4E66;
 }
 
 
-footer.mdl-mini-footer {
-  bottom: 0;
-  padding: 0.5rem;
-  position: fixed;
-  width: 100%;
-  z-index: 1;
+
+/* HOMEPAGE SPECIFIC */
+
+
+.navigation-work{
+  position: absolute;
+  width: 49px;
+  height: 27px;
+  left: 149px;
+  top: 49px;
+
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 167.23%;
+  /* identical to box height, or 27px */
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #3A4E66;
 }
 
-footer.mdl-mini-footer > ul {
-  margin: auto;
-  font-size: 2rem;
+.navigation-about{
+  position: absolute;
+  width: 56px;
+  height: 27px;
+  left: 212px;
+  top: 49px;
+
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 167.23%;
+  /* identical to box height, or 27px */
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #3A4E66;}
+
+.navigation-resume{
+  position: absolute;
+  width: 64px;
+  height: 27px;
+  left: 283px;
+  top: 49px;
+
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 167.23%;
+  /* identical to box height, or 27px */
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #3A4E66;
 }
 
 
-@media screen and (max-width: 1024px) {
-  header.mdl-layout__header {
-    display: flex;
-  }
 
-.logo{
+.navigation-logo{
 position: absolute;
 width: 62px;
 height: 81.78px;
@@ -65,6 +146,350 @@ left: 26px;
 top: 25px;
 }
 
+.hero h1{
+  position: absolute;
+  width: 325px;
+  height: 68px;
+  left: 25px;
+  top: 169px;
+
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 45px;
+  line-height: 150%;
+  /* identical to box height, or 67px */
+
+  color: #D3AA6C;
+}
+
+.hero h2{
+  position: absolute;
+width: 325px;
+height: 198px;
+left: 25px;
+top: 257px;
+
+font-family: Avenir;
+font-style: normal;
+font-weight: normal;
+font-size: 24px;
+line-height: 167.23%;
+/* or 40px */
+
+color: #3A4E66;
+
+}
+
+.recent-work h1{
+  position: absolute;
+  width: 323px;
+  height: 45px;
+  left: 26px;
+  top: 555px;
+
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 150%;
+  /* identical to box height, or 45px */
+
+  color: #D3AA6C;
+}
+
+.project-image{
+  position: absolute;
+  width: 323px;
+  height: 323px;
+  left: 25px;
+  top: 620px;
+}
 
 
+.project-logo{
+  position: absolute;
+  width: 155.38px;
+  height: 56.46px;
+  left: 109px;
+  top: 963px;
+}
+
+.recent-work p{
+  position: absolute;
+  width: 323px;
+  height: 76px;
+  left: 25px;
+  top: 1039.46px;
+  text-align: center;
+  line-height: 167.23%;
+}
+
+.recent-work button{
+  position: absolute;
+  width: 153px;
+  height: 36px;
+  left: 110px;
+  top: 1135.46px;
+}
+
+
+.about-me h1{
+  position: absolute;
+  width: 325px;
+  height: 50px;
+  left: 26px;
+  top: 1271.46px;
+
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 150%;
+  /* or 45px */
+
+  color: #D3AA6C;
+}
+
+.personal-image{
+  position: absolute;
+  width: 323px;
+  height: 323px;
+  left: 26px;
+  top: 1341.46px;
+}
+
+.about-me p{
+  position: absolute;
+  width: 324px;
+  height: 243px;
+  left: 26px;
+  top: 1684px;
+
+  font-family: Baskerville;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 167.23%;
+  /* or 27px */
+
+  color: #3A4E66;
+}
+
+.about-me button{
+  position: absolute;
+  width: 152px;
+  height: 36px;
+  left: 25px;
+  top: 1947px;
+}
+
+
+.footer{
+  position: absolute;
+  width: 375px;
+  height: 148px;
+  left: 0px;
+  top: 2083px;
+  background-color: #3a4e66;
+  text-align: center;
+}
+
+.footer-header{
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 150%;
+  text-align: center;
+  color: #D3AA6C;
+}
+
+
+
+.footer-text{
+
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 167.23%;
+  /* identical to box height, or 20px */
+  text-align: center;
+  text-transform: uppercase;
+  color: #D3AA6C;
+}
+
+/* PROJECT SPECIFIC */
+
+.project-page-image{
+  position: absolute;
+  width: 323px;
+  height: 323px;
+  left: 26px;
+  top: 169px;
+}
+
+.project-page-logo{
+  position: absolute;
+  width: 155.38px;
+  height: 56.46px;
+  left: 106px;
+  top: 492px;
+}
+
+.project-title p{
+  position: absolute;
+width: 323px;
+height: 81px;
+left: 25px;
+top: 568.46px;
+text-align: center;
+}
+
+.project-title button{
+  position: absolute;
+width: 325px;
+height: 36px;
+left: 25px;
+top: 669.46px;
+}
+
+
+.bulletpoints{
+position: absolute;
+width: 375px;
+height: 874px;
+left: 0px;
+top: 852px;
+background: #EBD7D0;
+text-align: center;
+vertical-align: middle;
+}
+
+/* .bulletpoint-content{
+  margin-top:22px;
+  margin-bottom:22px;
+} */
+
+.roles{
+width: 100%;
+margin-top: 20px;
+margin-bottom: 20px;
+}
+
+.deliverables{
+width: 100%;
+margin-top: 20px;
+margin-bottom: 20px;
+}
+
+.tools-used{
+width: 100%;
+margin-top: 20px;
+margin-bottom: 20px;
+}
+
+.tldr{
+  position: absolute;
+width: 325px;
+height: 701px;
+left: 26px;
+top: 1776px;
+}
+
+.summary{
+margin-top:20px;
+margin-bottom:20px;
+}
+
+.problem{
+margin-top:20px;
+margin-bottom:20px;
+}
+
+.solution{
+margin-top:20px;
+margin-bottom:20px;
+}
+
+
+.discovery{
+
+position: absolute;
+width: 375px;
+height: 4616px;
+left: 0px;
+top: 2527px;
+}
+
+.information-architecture{
+  position: absolute;
+  width: 375px;
+  height: 3928px;
+  left: 0px;
+  top: 7243px;
+
+}
+
+.branding{
+  position: absolute;
+  width: 375px;
+  height: 9987.69px;
+  left: 0px;
+  top: 11271px;
+
+}
+
+.lessons-learned{
+  position: absolute;
+width: 326px;
+height: 819px;
+left: 25px;
+top: 21358.69px;
+}
+
+.bottom-nav{
+  display:inline;
+  position: absolute;
+  width: 324.5px;
+  height: 27px;
+  left: 25px;
+  top: 22228px;
+
+}
+
+.verve-footer{
+  position: absolute;
+  width: 375px;
+  height: 148px;
+  left: 0px;
+  top: 22355px;
+  background-color: #3a4e66;
+  text-align: center;
+}
+
+.verve-footer-header{
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 150%;
+  text-align: center;
+  color: #D3AA6C;
+}
+
+
+
+.verve-footer-text{
+
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 167.23%;
+  /* identical to box height, or 20px */
+  text-align: center;
+  text-transform: uppercase;
+  color: #D3AA6C;
 }
