--- a/styles/main.css
+++ b/styles/main.css
@@ -38,7 +38,7 @@ height: 36px;
 
 h1 {
 color: #3A4E66;
-font-weight: bolder;
+font-weight: 900;
 font-family: avenir;
 font-size: 30px;
 line-height: 150%;
@@ -48,17 +48,22 @@ h2 {
 color:#3a4e66;
 font-family: Avenir;
 font-style: normal;
-font-weight: normal;
+font-weight: 800;
 font-size: 24px;
 line-height: 167.23%;
+margin-top:20px;
+margin-bottom:20px;
 }
 
 h3 {
 color: ;
-font-weight: medium;
+font-weight: 500;
 font-family: avenir;
 font-size: 20px;
 color:#d3aa6c;
+margin-top:20px;
+margin-bottom:20px;
+
 }
 
 h4{
@@ -76,7 +81,10 @@ font-weight: normal;
 font-size: 16px;
 line-height: 167.23%;
 color: #3A4E66;
+margin-top:20px;
+margin-bottom:20px;
 }
+
 
 
 
@@ -365,6 +373,7 @@ top: 852px;
 background: #EBD7D0;
 text-align: center;
 vertical-align: middle;
+
 }
 
 /* .bulletpoint-content{
@@ -372,10 +381,24 @@ vertical-align: middle;
   margin-bottom:22px;
 } */
 
+
+
+
 .roles{
 width: 100%;
 margin-top: 20px;
 margin-bottom: 20px;
+}
+
+.roles p {
+  font-family: Baskerville;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 167.23%;
+  color: #3A4E66;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .deliverables{
@@ -384,14 +407,36 @@ margin-top: 20px;
 margin-bottom: 20px;
 }
 
+.deliverables p {
+  font-family: Baskerville;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 167.23%;
+  color: #3A4E66;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .tools-used{
 width: 100%;
 margin-top: 20px;
 margin-bottom: 20px;
 }
 
+.tools-used p {
+  font-family: Baskerville;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 167.23%;
+  color: #3A4E66;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .tldr{
-  position: absolute;
+position: absolute;
 width: 325px;
 height: 701px;
 left: 26px;
@@ -417,11 +462,65 @@ margin-bottom:20px;
 .discovery{
 
 position: absolute;
-width: 375px;
+width: 325px;
 height: 4616px;
-left: 0px;
+left: 25px;
 top: 2527px;
+
 }
+
+.survey-chart{
+background-color: #EBD7D0;
+width: 325px;
+height: 381px;
+padding: 50px;
+align-content: center;
+margin-top: 50px;
+margin-bottom: 50px;
+
+}
+
+.chart-header{
+font-family: Avenir;
+font-style: normal;
+font-weight: 900;
+font-size: 30px;
+line-height: 150%;
+text-align: center;
+color: #FFFFFF;
+padding-top: 20px;
+}
+
+.chart-body{
+  font-family: Baskerville;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 167.23%;
+  text-align: center;
+  color: #3A4E66;
+
+  padding-left: 20px;
+  padding-right: 20px;
+
+}
+
+.chart-emphasis{
+  font-weight: bold;
+}
+
+
+.persona{
+    font-weight: bold;
+}
+
+
+
+
+
+
+
+
 
 .information-architecture{
   position: absolute;
