--- a/styles/main.css
+++ b/styles/main.css
@@ -5,68 +5,60 @@ padding-bottom: 5rem;
 .container {
    display: grid;
    grid-auto-columns: 25%;
-   /* grid-auto-rows: 100%; */
    grid-column-gap: 20px;
    margin: 25px;
-
-
    justify-items: center;
    align-items: center;
    box-sizing: border-box;
 }
 
-
-
-
 /* TYPOGRAPHY & GENERAL  */
 
 button{
-background-color:#d3aa6c;
-border:none;
-color:#ffffff;
-font-weight: medium;
-font-family: avenir;
-font-size: 16px;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-cursor: default;
-text-transform: uppercase;
-width: 325px;
-height: 36px;
-margin-top: 20px;
+  background-color:#d3aa6c;
+  border:none;
+  color:#ffffff;
+  font-weight: medium;
+  font-family: avenir;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: default;
+  text-transform: uppercase;
+  width: 325px;
+  height: 36px;
+  margin-top: 20px;
 
 }
 
 h1 {
-color: #3A4E66;
-font-weight: 900;
-font-family: avenir;
-font-size: 30px;
-line-height: 150%;
-
+  color: #3A4E66;
+  font-weight: 900;
+  font-family: avenir;
+  font-size: 30px;
+  line-height: 150%;
 }
 
 h2 {
-color:#3a4e66;
-font-family: Avenir;
-font-style: normal;
-font-weight: 800;
-font-size: 24px;
-line-height: 167.23%;
-margin-top:20px;
-margin-bottom:20px;
+  color:#3a4e66;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 167.23%;
+  margin-top:20px;
+  margin-bottom:20px;
 }
 
 h3 {
-color: ;
-font-weight: 500;
-font-family: avenir;
-font-size: 20px;
-color:#d3aa6c;
-margin-top:20px;
-margin-bottom:20px;
-
+  color: ;
+  font-weight: 500;
+  font-family: avenir;
+  font-size: 20px;
+  color:#d3aa6c;
+  margin-top:20px;
+  margin-bottom:20px;
 }
 
 h4{
@@ -78,14 +70,14 @@ h4{
 }
 
 p{
-font-family: Baskerville;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 167.23%;
-color: #3A4E66;
-margin-top:20px;
-margin-bottom:20px;
+  font-family: Baskerville;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 167.23%;
+  color: #3A4E66;
+  margin-top:20px;
+  margin-bottom:20px;
 }
 
 
@@ -119,7 +111,6 @@ a{
   height: 27px;
   left: 212px;
   top: 49px;
-
   font-family: Avenir;
   font-style: normal;
   font-weight: 500;
@@ -136,26 +127,22 @@ a{
   height: 27px;
   left: 283px;
   top: 49px;
-
   font-family: Avenir;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 167.23%;
-  /* identical to box height, or 27px */
   text-transform: uppercase;
   text-decoration: none;
   color: #3A4E66;
 }
 
-
-
 .navigation-logo{
-position: absolute;
-width: 62px;
-height: 81.78px;
-left: 26px;
-top: 25px;
+  position: absolute;
+  width: 62px;
+  height: 81.78px;
+  left: 26px;
+  top: 25px;
 }
 
 .hero h1{
@@ -164,32 +151,26 @@ top: 25px;
   height: 68px;
   left: 25px;
   top: 169px;
-
   font-family: Avenir;
   font-style: normal;
   font-weight: 900;
   font-size: 45px;
   line-height: 150%;
-  /* identical to box height, or 67px */
-
   color: #D3AA6C;
 }
 
 .hero h2{
   position: absolute;
-width: 325px;
-height: 198px;
-left: 25px;
-top: 257px;
-
-font-family: Avenir;
-font-style: normal;
-font-weight: normal;
-font-size: 24px;
-line-height: 167.23%;
-/* or 40px */
-
-color: #3A4E66;
+  width: 325px;
+  height: 198px;
+  left: 25px;
+  top: 257px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 167.23%;
+  color: #3A4E66;
 
 }
 
@@ -197,6 +178,7 @@ color: #3A4E66;
   font-weight: bold;
   font-style: italic;
 }
+
 .recent-work h1{
   position: absolute;
   width: 323px;
@@ -209,8 +191,6 @@ color: #3A4E66;
   font-weight: 900;
   font-size: 30px;
   line-height: 150%;
-  /* identical to box height, or 45px */
-
   color: #D3AA6C;
 }
 
@@ -249,21 +229,17 @@ color: #3A4E66;
   top: 1135.46px;
 }
 
-
 .about-me h1{
   position: absolute;
   width: 325px;
   height: 50px;
   left: 26px;
   top: 1271.46px;
-
   font-family: Avenir;
   font-style: normal;
   font-weight: 900;
   font-size: 30px;
   line-height: 150%;
-  /* or 45px */
-
   color: #D3AA6C;
 }
 
@@ -281,14 +257,11 @@ color: #3A4E66;
   height: 243px;
   left: 26px;
   top: 1684px;
-
   font-family: Baskerville;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 167.23%;
-  /* or 27px */
-
   color: #3A4E66;
 }
 
@@ -312,7 +285,6 @@ color: #3A4E66;
   text-align: center;
   display: block;
   padding: 20px;
-
 }
 
 .footer-header{
@@ -336,7 +308,6 @@ color: #3A4E66;
 }
 
 .footer-text{
-
   font-family: Avenir;
   font-style: normal;
   font-weight: normal;
@@ -369,46 +340,41 @@ color: #3A4E66;
 
 .project-title p{
   position: absolute;
-width: 323px;
-height: 81px;
-left: 25px;
-top: 568.46px;
-text-align: center;
+  width: 323px;
+  height: 81px;
+  left: 25px;
+  top: 568.46px;
+  text-align: center;
 }
 
 .project-title button{
   position: absolute;
-width: 325px;
-height: 36px;
-left: 25px;
-top: 669.46px;
+  width: 325px;
+  height: 36px;
+  left: 25px;
+  top: 669.46px;
 }
-
 
 .bulletpoints{
-position: absolute;
-width: 375px;
-height: 874px;
-left: 0px;
-top: 852px;
-background: #EBD7D0;
-text-align: center;
-vertical-align: middle;
-
+  position: absolute;
+  width: 325px;
+  height: 874px;
+  left: 25px;
+  top: 852px;
+  background: #EBD7D0;
+  text-align: center;
+  vertical-align: middle;
 }
 
-/* .bulletpoint-content{
-  margin-top:22px;
-  margin-bottom:22px;
-} */
-
-
-
+.bulletpoints-content{
+  box-sizing: border-box;
+  padding: 85.5px;
+}
 
 .roles{
-width: 100%;
-margin-top: 20px;
-margin-bottom: 20px;
+  width: 100%;
+  margin-top: ;
+  margin-bottom: ;
 }
 
 .roles p {
@@ -422,10 +388,13 @@ margin-bottom: 20px;
   margin-bottom: auto;
 }
 
+.roles-list{
+  margin-top: 20px;
+}
+
 .deliverables{
-width: 100%;
-margin-top: 20px;
-margin-bottom: 20px;
+  width: 100%;
+  margin-top: 20px ;
 }
 
 .deliverables p {
@@ -439,10 +408,14 @@ margin-bottom: 20px;
   margin-bottom: auto;
 }
 
+.deliverables-list{
+  margin-top: 20px;
+}
+
 .tools-used{
-width: 100%;
-margin-top: 20px;
-margin-bottom: 20px;
+  width: 100%;
+  margin-top: 20px;
+
 }
 
 .tools-used p {
@@ -456,60 +429,60 @@ margin-bottom: 20px;
   margin-bottom: auto;
 }
 
+.tools-list{
+  margin-top: 20px;
+}
+
 .tldr{
-position: absolute;
-width: 325px;
-height: 701px;
-left: 26px;
-top: 1776px;
+  position: absolute;
+  width: 325px;
+  height: 701px;
+  left: 26px;
+  top: 1776px;
 }
 
 .summary{
-margin-top:20px;
-margin-bottom:20px;
+  margin-top:20px;
+  margin-bottom:20px;
 }
 
 .problem{
-margin-top:20px;
-margin-bottom:20px;
+  margin-top:20px;
+  margin-bottom:20px;
 }
 
 .solution{
-margin-top:20px;
-margin-bottom:20px;
+  margin-top:20px;
+  margin-bottom:20px;
 }
 
-
 .discovery{
-
-position: absolute;
-width: 325px;
-height: 4616px;
-left: 25px;
-top: 2527px;
-
+  position: absolute;
+  width: 325px;
+  height: 4616px;
+  left: 25px;
+  top: 2527px;
 }
 
 .survey-chart{
-background-color: #EBD7D0;
-width: 325px;
-height: 381px;
-padding: 50px;
-align-content: center;
-margin-top: 50px;
-margin-bottom: 50px;
-
+  background-color: #EBD7D0;
+  width: 325px;
+  height: 381px;
+  padding: 50px;
+  align-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .chart-header{
-font-family: Avenir;
-font-style: normal;
-font-weight: 900;
-font-size: 30px;
-line-height: 150%;
-text-align: center;
-color: #FFFFFF;
-padding-top: 20px;
+  font-family: Avenir;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 150%;
+  text-align: center;
+  color: #FFFFFF;
+  padding-top: 20px;
 }
 
 .chart-body{
@@ -520,19 +493,16 @@ padding-top: 20px;
   line-height: 167.23%;
   text-align: center;
   color: #3A4E66;
-
   padding-left: 20px;
   padding-right: 20px;
-
 }
 
 .chart-emphasis{
   font-weight: bold;
 }
 
-
 .persona{
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .molly{
@@ -546,8 +516,8 @@ padding-top: 20px;
 }
 
 .competitive-analysis{
-padding-top: 50px;
-padding-bottom: 50px ;
+  padding-top: 50px;
+  padding-bottom: 50px ;
 }
 
 .swot-logo1{
@@ -560,43 +530,32 @@ padding-bottom: 50px ;
 
 .swot1{
   font-family: Avenir;
-font-style: normal;
-font-weight: 900;
-font-size: 19.4718px;
-line-height: 150%;
-/* identical to box height, or 29px */
-
-/* gray */
-color: rgba(147, 155, 165, 0.2);
-
-text-align: center;
-background-color: #EBD7D0;
-border-left: 0.655242px solid #EBD7D0;
-border-right: 0.655242px solid #EBD7D0;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 19.4718px;
+  line-height: 150%;
+  color: rgba(147, 155, 165, 0.2);
+  text-align: center;
+  background-color: #EBD7D0;
+  border-left: 0.655242px solid #EBD7D0;
+  border-right: 0.655242px solid #EBD7D0;
 }
 
 .swot-points1{
   font-family: Baskerville;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 167.23%;
-/* or 20px */
-
-/* Blue */
-color: #3A4E66;
-padding-left: 50px;
-background-color: #EBD7D0;
-border-left: 0.655242px solid #EBD7D0;
-border-right: 0.655242px solid #EBD7D0;
-
-
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 167.23%;
+  color: #3A4E66;
+  padding-left: 50px;
+  background-color: #EBD7D0;
+  border-left: 0.655242px solid #EBD7D0;
+  border-right: 0.655242px solid #EBD7D0;
 }
 
 td{
   padding:10px;
-
-
 }
 
 .swot-logo2{
@@ -604,77 +563,63 @@ td{
   border-left: 0.655242px solid #EBD7D0;
   border-right: 0.655242px solid #EBD7D0;
 }
+
 .swot2{
   font-family: Avenir;
-font-style: normal;
-font-weight: 900;
-font-size: 19.4718px;
-line-height: 150%;
-/* identical to box height, or 29px */
-
-/* gray */
-color: rgba(147, 155, 165, 0.2);
-
-text-align: center;
-border-left: 0.655242px solid #EBD7D0;
-border-right: 0.655242px solid #EBD7D0;
-
+  font-style: normal;
+  font-weight: 900;
+  font-size: 19.4718px;
+  line-height: 150%;
+  color: rgba(147, 155, 165, 0.2);
+  text-align: center;
+  border-left: 0.655242px solid #EBD7D0;
+  border-right: 0.655242px solid #EBD7D0;
 }
 
 .swot-points2{
   font-family: Baskerville;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 167.23%;
-/* or 20px */
-
-/* Blue */
-color: #3A4E66;
-padding-left: 50px;
-background-color: #FFFFFF;
-border-left: 0.655242px solid #EBD7D0;
-border-right: 0.655242px solid #EBD7D0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 167.23%;
+  color: #3A4E66;
+  padding-left: 50px;
+  background-color: #FFFFFF;
+  border-left: 0.655242px solid #EBD7D0;
+  border-right: 0.655242px solid #EBD7D0;
 }
 
 .swot-logo3{
-  text-align: center;
-  border-left: 0.655242px solid #EBD7D0;
-  border-right: 0.655242px solid #EBD7D0;
-  background-color: #EBD7D0;
+    text-align: center;
+    border-left: 0.655242px solid #EBD7D0;
+    border-right: 0.655242px solid #EBD7D0;
+    background-color: #EBD7D0;
 }
+
 .swot3{
   font-family: Avenir;
-font-style: normal;
-font-weight: 900;
-font-size: 19.4718px;
-line-height: 150%;
-/* identical to box height, or 29px */
-
-/* gray */
-color: rgba(147, 155, 165, 0.2);
-
-text-align: center;
-background-color: #EBD7D0;
-border-left: 0.655242px solid #EBD7D0;
-border-right: 0.655242px solid #EBD7D0;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 19.4718px;
+  line-height: 150%;
+  color: rgba(147, 155, 165, 0.2);
+  text-align: center;
+  background-color: #EBD7D0;
+  border-left: 0.655242px solid #EBD7D0;
+  border-right: 0.655242px solid #EBD7D0;
 }
 
 .swot-points3{
   font-family: Baskerville;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 167.23%;
-/* or 20px */
-
-/* Blue */
-color: #3A4E66;
-padding-left: 50px;
-background-color: #EBD7D0;
-border-left: 0.655242px solid #EBD7D0;
-border-right: 0.655242px solid #EBD7D0;
-
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 167.23%;
+  color: #3A4E66;
+  padding-left: 50px;
+  background-color: #EBD7D0;
+  border-left: 0.655242px solid #EBD7D0;
+  border-right: 0.655242px solid #EBD7D0;
 }
 
 .swot-logo4{
@@ -682,41 +627,32 @@ border-right: 0.655242px solid #EBD7D0;
   border-left: 0.655242px solid #EBD7D0;
   border-right: 0.655242px solid #EBD7D0;
 }
+
 .swot4{
   font-family: Avenir;
-font-style: normal;
-font-weight: 900;
-font-size: 19.4718px;
-line-height: 150%;
-/* identical to box height, or 29px */
-
-/* gray */
-color: rgba(147, 155, 165, 0.2);
-
-text-align: center;
-border-left: 0.655242px solid #EBD7D0;
-border-right: 0.655242px solid #EBD7D0;
-
+  font-style: normal;
+  font-weight: 900;
+  font-size: 19.4718px;
+  line-height: 150%;
+  color: rgba(147, 155, 165, 0.2);
+  text-align: center;
+  border-left: 0.655242px solid #EBD7D0;
+  border-right: 0.655242px solid #EBD7D0;
 }
-
 
 .swot-points4{
   font-family: Baskerville;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 167.23%;
-/* or 20px */
-
-/* Blue */
-color: #3A4E66;
-padding-left: 50px;
-background-color: #FFFFFF;
-border-left: 0.655242px solid #EBD7D0;
-border-right: 0.655242px solid #EBD7D0;
-border-bottom: 0.655242px solid #EBD7D0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 167.23%;
+  color: #3A4E66;
+  padding-left: 50px;
+  background-color: #FFFFFF;
+  border-left: 0.655242px solid #EBD7D0;
+  border-right: 0.655242px solid #EBD7D0;
+  border-bottom: 0.655242px solid #EBD7D0;
 }
-
 
 .information-architecture{
   position: absolute;
@@ -728,7 +664,6 @@ border-bottom: 0.655242px solid #EBD7D0;
 }
 
 .story-role{
-
   font-family: Baskerville;
   font-style: italic;
   font-weight: normal;
@@ -768,22 +703,22 @@ border-bottom: 0.655242px solid #EBD7D0;
 
 .wireframe1{
   width: 100.49px;
- height: 217.59px;
+  height: 217.59px;
 }
 
 .wireframe2{
   width: 100.49px;
- height: 217.59px;
+  height: 217.59px;
 }
 
 .wireframe3{
   width: 100.49px;
- height: 217.59px;
+  height: 217.59px;
 }
 
 .wireframe4{
   width: 100.49px;
- height: 217.59px;
+  height: 217.59px;
 }
 
 .wireframe5{
@@ -798,9 +733,7 @@ border-bottom: 0.655242px solid #EBD7D0;
 
 .user-testing{
   padding-top: 50px;
-
 }
-
 
 .branding{
   position: absolute;
@@ -819,7 +752,6 @@ border-bottom: 0.655242px solid #EBD7D0;
 }
 
 .moodboard{
-
   width: 325px;
   height: 251.14px;
   display: block;
@@ -834,14 +766,10 @@ border-bottom: 0.655242px solid #EBD7D0;
 }
 
 .logo-sketches{
-
   width: 325px;
   height: 175.56px;
   left: 25px;
-
 }
-
-
 
 .final-logo{
   width: 323.41px;
@@ -855,7 +783,6 @@ border-bottom: 0.655242px solid #EBD7D0;
   height: 1127px;
   left: 0px;
 }
-
 
 .final-colors{
 
@@ -900,7 +827,6 @@ border-bottom: 0.655242px solid #EBD7D0;
 }
 
 .menus{
-
   width: 325px;
   height: 168px;
   left: 25px;
@@ -911,7 +837,6 @@ border-bottom: 0.655242px solid #EBD7D0;
   width: 325.03px;
   height: 154px;
   left: 25px;
-
 }
 
 .final-revision-screens{
@@ -938,8 +863,8 @@ border-bottom: 0.655242px solid #EBD7D0;
 }
 
 .bottom{
-width:325px;
-column-width: 93.75px;
+  width:325px;
+  column-width: 93.75px;
 
 }
 
@@ -962,8 +887,6 @@ column-width: 93.75px;
     display:inline;
 
 }
-
-
 
 .verve-footer{
   box-sizing: border-box;
@@ -1001,7 +924,6 @@ column-width: 93.75px;
 }
 
 .verve-footer-text{
-
   font-family: Avenir;
   font-style: normal;
   font-weight: normal;
